@@ -22,6 +22,7 @@
                 <configuration>
                     <argLine>
                         --add-opens moreland.win32.credentialstore/moreland.win32.credentialstore=ALL-UNNAMED
+                        --add-opens moreland.win32.credentialstore/moreland.win32.credentialstore.internal=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
@@ -39,5 +40,6 @@
         <artifactId>jna-platform</artifactId>
         <version>5.6.0</version>
       </dependency>
+    
     </dependencies>
 </project>
